# music-adder

./: README.md  ROADMAP.md  pyproject.toml
docs/: usage.md
music_adder/: cli.py  config.py  downloader.py  mover.py  pipeline.py  tagger.py
